--- a/src/app/estadistica/estadistica.component.html
+++ b/src/app/estadistica/estadistica.component.html
@@ -1,4 +1,2 @@
-<div class="page-wrapper" >
-    <p>estadistica works!</p>
-</div>
-
+<app-pie-chart></app-pie-chart>
+<app-bar-chart></app-bar-chart>
