--- a/src/app/nav-vertical/nav-vertical.component.html
+++ b/src/app/nav-vertical/nav-vertical.component.html
@@ -5,7 +5,7 @@
                 <img src="../../assets/img/logo.png" width="35" height="35" alt=""> <span>Preclinic</span>
             </a>
         </div>
-        <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
+        <!--<a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>-->
         <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"><i class="fa fa-bars"></i></a>
         <ul class="nav user-menu float-right">
 
