--- a/src/app/bar-chart/bar-chart.component.css
+++ b/src/app/bar-chart/bar-chart.component.css
@@ -16,3 +16,17 @@
     left:800px;    
 }
 
+#miboton1 {
+    display: inline;
+    position: absolute;
+    top:115px;
+    left:1180px;  
+}
+
+#miboton2 {
+    display: inline;
+    position: absolute;
+    top:465px;
+    left:1180px;  
+}
+
