--- a/src/app/incidencia/incidencia.component.html
+++ b/src/app/incidencia/incidencia.component.html
@@ -22,7 +22,11 @@
 
                     <div class="form-group col">
                         <label>Descripcion</label>
-                        <input type="text" class="form-control" name="descripcion" formControlName="descripcion" placeholder="Descripcion">
+                        <!-- <input type="text" class="form-control" name="descripcion" formControlName="descripcion" placeholder="Descripcion">-->
+                        <!--<textarea type="text" id="form7" name="descripcion" [(ngModel)]="descripcion" class="md-textarea md-textarea-auto form-control" mdbInput formControlName="descripcion" placeholder="Descripcion . . ."></textarea>
+
+                        -->
+                        <textarea type="text" id="form7" name="descripcion" formControlName="descripcion" class="md-textarea md-textarea-auto form-control" mdbInput formControlName="descripcion" placeholder="Descripcion . . ."></textarea>
 
 
                     </div>
