--- a/src/app/incidencia/incidencia/incidencia.component.html
+++ b/src/app/incidencia/incidencia/incidencia.component.html
@@ -15,27 +15,19 @@
                     </div>
                     <div class="form-group col">
                         <label>Fecha</label>
-                        <input type="text" class="form-control" name="fecha" formControlName="fecha" placeholder="yy/mm/dd">
+                        <input type="date" class="form-control" name="fecha" formControlName="fecha" placeholder="yy/mm/dd">
                     </div>
-
-
 
                     <div class="form-group col">
                         <label>Descripcion</label>
-                        <input type="text" class="form-control" name="descripcion" formControlName="descripcion" placeholder="Descripcion">
 
-                        <!--<textarea type="text" id="form7" name="descripcion" [(ngModel)]="descripcion" class="md-textarea md-textarea-auto form-control" mdbInput formControlName="descripcion" placeholder="Descripcion . . ."></textarea>
+                        <textarea type="text" id="form7" name="descripcion" formControlName="descripcion" class="md-textarea md-textarea-auto form-control" mdbInput placeholder="Descripcion . . ."></textarea>
 
-                        -->
                     </div>
                     <div class="form-group col">
                         <label>Accion</label>
                         <input type="text" class="form-control" name="accion" formControlName="accion" placeholder="Accion">
                     </div>
-
-
-
-
 
                     <div class="form-group  text-center">
                         <button type="submit" class="btn btn-primary ">Guardar</button>
@@ -45,4 +37,4 @@
             </div>
         </div>
     </div>
-</div>   
+</div>
