--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -46,7 +46,10 @@
                                             <th>{{i+1}}</th>
                                             <th>{{dato.name}}</th>
                                             <th>{{dato.description}}</th>
-                                            <th><button type="submit" class="btn btn-danger" (click)="DeleteRoles(dato._id)">Eliminar</button></th>
+                                            <th><button type="submit" class="btn btn-danger" (click)="DeleteRoles(dato._id)">Eliminar</button>
+                                                <button  type="button"  (click)="EditarRol(dato._id)" class="btn btn-success ml-2 mr-2"  data-toggle="modal" data-target="#exampleModal"
+                                                >Editar</button>
+                                            </th>
 
                                         </tr>
                                     </tbody>
@@ -56,6 +59,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form #f="ngForm" (ngSubmit)="onSubmit()" >
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Nombre:</label>
+                                <input type="text" class="form-control" id="recipient-name" [(ngModel)]="nombre" name="nombre">
+                            </div>
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Descripción:</label>
+                                <input type="text" class="form-control" id="recipient-name" [(ngModel)]="descripcion" name="descripcion">
+                            </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary" (click)="EditadoRol()">Editar</button>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
             </div>
 
         </div>
